--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1196.0",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
     "react": "18.2.0",
