--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "aws-sdk": "^2.1196.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
@@ -23,7 +25,9 @@
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
