--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "tailwindcss": "^3.1.6",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "4.7.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
